--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "brofrong-math",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "Super simple project to practice publishing to npm repository.",
   "author": "Brofrong <brofrong@yandex.ru>",
   "license": "MIT",
@@ -14,15 +14,15 @@
     "npm",
     "package"
   ],
-  "main": "dist/index.js",
-  "module": "dist/index.js",
+  "main": "dist/index.cjs",
+  "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "type": "module",
   "engines": {
     "node": ">=18.0.0"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "vite build",
     "test": "bun test",
     "prepublishOnly": "bun run build"
   },
@@ -33,6 +33,8 @@
   ],
   "devDependencies": {
     "@types/bun": "latest",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vite": "^7.1.7",
+    "vite-plugin-dts": "^4.5.4"
   }
 }
