--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -27,4 +27,4 @@ jobs:
       - run: bun i
       - run: bun publish
         env:
-          NPM_CONFIG_TOKEN: ${{secrets.npm_token}}
+          NODE_AUTH_TOKEN: ${{secrets.npm_token}}
