--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,7 +1,4 @@
-# This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
-# For more information see: https://docs.github.com/en/actions/publishing-packages/publishing-nodejs-packages
-
-name: Node.js Package
+name: publish to npm
 
 on:
   release:
@@ -25,6 +22,7 @@ jobs:
         with:
           registry-url: https://registry.npmjs.org/
       - run: bun i
+      - run: echo ${{ secrets.NPM_TOKEN }}
       - run: bun publish
         env:
           NPM_CONFIG_TOKEN: ${{ secrets.NPM_TOKEN }}
