--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "scripts": {
     "build": "vite build",
     "test": "bun test",
-    "prepublishOnly": "bun run build"
+    "prepublishOnly": "bun run build",
+    "release": "release-it"
   },
   "files": [
     "lib",
@@ -33,6 +34,7 @@
   ],
   "devDependencies": {
     "@types/bun": "latest",
+    "release-it": "^19.0.5",
     "typescript": "^5",
     "vite": "^7.1.7",
     "vite-plugin-dts": "^4.5.4"
