--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
     "package"
   ],
   "main": "dist/index.cjs",
-  "module": "dist/index.mjs",
+  "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "type": "module",
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=20.19.0"
   },
   "scripts": {
-    "build": "vite build",
+    "build": "tsdown",
     "test": "bun test",
     "prepublishOnly": "bun run build",
     "release": "release-it"
@@ -35,8 +35,7 @@
   "devDependencies": {
     "@types/bun": "latest",
     "release-it": "^19.0.5",
-    "typescript": "^5",
-    "vite": "^7.1.7",
-    "vite-plugin-dts": "^4.5.4"
+    "tsdown": "^0.15.4",
+    "typescript": "^5"
   }
 }
